# openapi.yaml
@@ -444,9 +444,9 @@ paths:
         Make an OAuth2 [token request](https://www.rfc-editor.org/rfc/rfc6749#section-4.1.3) to get access credentials.
       summary: Access token request.
       parameters:
-        - in: query # todo move to header
+        - in: query # todo move to header?
           description: Use the `registrationID` registered with your API provider.
-          name: client
+          name: registration
           schema:
             type: string
           examples:
@@ -486,9 +486,11 @@ paths:
                 200:
                   value:
                     {
-                      tokenSet:
+                      "oauth2TokenSet": {
+                        "access_token": "acb9a134-a13d-4a48-8089-1ae95e19612f",
+                        "id_token": "eyJraWQiOiIyaE94YjdCU2gzT0ZGeno4YWc0QmY4RFprSFA4ank4TTQzakRRV1YwbUZBIiwiYWxnIjoibm9uZSJ9.eyJub25jZSI6Ijk2ZDNkZDEwLTJkYzctNGI5My04MzVkLTg5ZGRkODY2NWIwNiIsInN1YiI6ImphbmUgZG9lIiwiYXVkIjoiQ0xJRU5UX0lEIiwiaXNzIjoiaHR0cDovL3NlcnZlci5leGFtcGxlLmNvbSIsImlhdCI6MTY2Nzg5MTA2NiwiZXhwIjoxNjY3OTE5ODY2fQ==."
+                      }
                     }
-
   /resource:
     description: Access a resource.
 
