# src/route/token.ts
@@ -13,7 +13,7 @@ export const tokenRequest = (config: Config): rout => {
   const tokenService = new TokenService(config);
   const bodySchema = getRequestBodySchema("post", Route.Token);
   router.post(Route.Token, validate({body: bodySchema}), function (req: Request, resp: Response, next: NextFunction) {
-    const registrationID = req.query?.client as string;
+    const registrationID = req.query?.registration as string;
     const code = req.body?.oauth2Code as string;
     const state = req.body?.oauth2State as string;
     const nonce = req.body?.openIDNonce as string;
